# diffusion-image-generator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.override.yml  docker-compose.yml
api/: .dockerignore  .env.sample  .gitignore  .watchignore  Dockerfile  nginx.conf  pyproject.toml
api/app/: main.py
api/app/core/: config.py
api/app/models/: __init__.py  schemas.py
api/app/routers/: health.py  images.py
api/app/services/: image_generation.py
api/config/: README.md
api/docs/: CONTAINER-zh.md  CONTAINER.md  README-zh.md  README.md  index.md
api/scripts/: README.md  build.py  build.sh  format.py  lint.py  start_server.py  start_server.sh  test.py  type_check.py
frontend/: .dockerignore  .env.sample  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/gallery/: page.tsx
frontend/src/app/generate/: page.tsx
frontend/src/components/: ImageGallery.tsx  ImageGenerator.tsx
frontend/src/lib/: api.ts
frontend/src/types/: api.ts
notebook/: image-gen.ipynb
